...
    }).start()
  }

  return (
    <View style={styles.container}>
      <TouchableOpacity
        testID="hero-card-button"
        activeOpacity={1}
        onPress={onPress}
        onPressIn={handlePressIn}
        onPressOut={handlePressOut}
        disabled={disabled || state === 'completed'}
      >
...
